--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "cSpell.words": [
         "Kakao"
     ],
-    "editor.defaultFormatter": "Glavin001.unibeautify-vscode"
+    "editor.defaultFormatter": "Glavin001.unibeautify-vscode",
+    "editor.fontFamily": "\"Dank Mono\", Menlo, Monaco, 'Courier New', monospace"
 }
