--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,6 @@
     },
     "[erb]": {
         "editor.defaultFormatter": "aliariff.vscode-erb-beautify"
-    }
+    },
+    "editor.formatOnSave": true
 }
